all changes related offer new Scenarios
